tests/algorithms/x/C/project_euler/problem_041/sol1.c
// Generated by Mochi 0.10.32 on 2025-08-23 15:27 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t remove_at_len;
size_t collect_primes_len;

size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long is_prime(long long number);
long long * remove_at(long long * xs, size_t xs_len, long long index);
long long * collect_primes(long long * nums, size_t nums_len, long long current, long long * primes, size_t primes_len);
long long max_list(long long * nums, size_t nums_len);
long long solution(long long n);
int main(void);

long long is_prime(long long number) {
    if ((1LL < number) && (number < 4LL)) {
        return 1LL;
    } else {
        if (((number < 2LL) || ((number % 2LL) == 0LL)) || ((number % 3LL) == 0LL)) {
            return 0LL;
        }
    }
    long long i = 5LL;
    while ((i * i) <= number) {
        if (((number % i) == 0LL) || ((number % (i + 2LL)) == 0LL)) {
            return 0LL;
        }
        i = i + 6LL;
    }
    return 1LL;
}

long long * remove_at(long long * xs, size_t xs_len, long long index) {
    long long *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < xs_len) {
        if (i != index) {
            res = list_append_int_new(res, res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
            res_len++;
        }
        i = i + 1LL;
    }
    return remove_at_len = res_len, res;
}

long long * collect_primes(long long * nums, size_t nums_len, long long current, long long * primes, size_t primes_len) {
    if (nums_len == 0LL) {
        if (is_prime(current)) {
            primes = list_append_long_long(primes, &primes_len, current);
        }
        return collect_primes_len = primes_len, primes;
    }
    long long i = 0LL;
    long long *res = primes;
    size_t res_len = primes_len;
    while (i < nums_len) {
        long long digit = nums[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nums_len + _mochi_idx : _mochi_idx;})];
        long long *remaining = remove_at(nums, nums_len, i);
        size_t remaining_len = remove_at_len;
        res = collect_primes(remaining, remaining_len, (current * 10LL) + digit, res, res_len);
        res_len = collect_primes_len;
        i = i + 1LL;
    }
    return collect_primes_len = res_len, res;
}

long long max_list(long long * nums, size_t nums_len) {
    long long m = 0LL;
    long long i = 0LL;
    while (i < nums_len) {
        if (nums[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nums_len + _mochi_idx : _mochi_idx;})] > m) {
            m = nums[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nums_len + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    return m;
}

long long solution(long long n) {
    long long *digits = NULL;
    size_t digits_len = 0;
    long long i = 1LL;
    while (i <= n) {
        digits = list_append_long_long(digits, &digits_len, i);
        i = i + 1LL;
    }
    long long *primes = collect_primes(digits, digits_len, 0LL, NULL, 0);
    size_t primes_len = collect_primes_len;
    if (primes_len == 0LL) {
        return 0LL;
    }
    return max_list(primes, primes_len);
}

int main(void) {
    {
        long long __start = _now();
        puts(str_concat("solution() = ", str_int(solution(7LL))));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
